reviewed partials with pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,22 +6,8 @@
 
 <body>
 
-   <div class="navbar navbar navbar-fixed-top" role="navigation">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-               <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-               </button>
-               <a class="navbar-brand" href="#"><img src="public/logo.png"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><button type="button" class="btn"><span class="glyphicon glyphicon-user"></span> Sign Up</button></li>
-                  <li><button type="button" class="btn"><span class="glyphicon glyphicon-log-in"></span> Login</button></li>
-               </ul>
-            </div>
-         </div>
-      </div>
+   <% include ../partials/navbar %>
+   
       <div id="container">
          <div id="firstview">
             <center>
