--- a/views/second_view.ejs
+++ b/views/second_view.ejs
@@ -24,71 +24,8 @@
       <link rel="stylesheet" href="style2.css">
    </head>
    <body onload="initMap()">
-      <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="firstnav">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="index.html"><img src="public/logo.png"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><button type="button" class="btn"><span class="glyphicon glyphicon-user"></span> Sign Up</button></li>
-                  <li><button type="button" class="btn"><span class="glyphicon glyphicon-log-in"></span> Login</button></li>
-               </ul>
-            </div>
-         </div>
-      </div>
-      <div class="navbar navbar navbar-static-top" role="navigation" id="secondnav"> 
-         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sec_nav">
-               <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-            </button>
-         </div>
-         <div id="sec_nav" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
-                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Action</a></li>
-                     </ul>
-               </li>
-               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
-                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Action</a></li>
-                     </ul>
-               </li>
-               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
-                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Action</a></li>
-                     </ul>
-               </li>
-            </ul>
-         <div class="col-sm-3 col-md-2 pull-right">
-            <form class="navbar-form" role="search">
-               <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-               <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-               </div>
-               </div>
-            </form>
-         </div>
-      </div>
-   </div>
+      <% include ../partials/navbar %>
+      <% include ../partials/navbar2 %>
    <div id="container"></div>
    
    </body>
