--- a/views/third_view.ejs
+++ b/views/third_view.ejs
@@ -24,24 +24,7 @@
       <link rel="stylesheet" href="style3.css">
    </head>
    <body onload="">
-      <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="firstnav">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-               <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="index.html"><img src="public/logo.png"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><button type="button" class="btn"><span class="glyphicon glyphicon-user"></span> Sign Up</button></li>
-                  <li><button type="button" class="btn"><span class="glyphicon glyphicon-log-in"></span> Login</button></li>
-               </ul>
-            </div>
-         </div>
-      </div>
+      <% include ../partials/navbar %>
       <div id="container">
          <div id="place_img" class="img"></div>
          <div id="Description" class="container-fluid">
