--- a/views/second_view.html
+++ b/views/second_view.html
@@ -23,14 +23,12 @@
       <script src="/map_script.js"></script>
       <link rel="stylesheet" href="style2.css">
    </head>
-   <body>
-   <body>
-      <% include ./partials/navbar %>
-      <% include ./partials/navbar2 %>
-   <div id="container">
+   <body onload="initMap()">
+      <!-- <% include ./partials/navbar %>
+      <% include ./partials/navbar2 %> -->
+   <div id="container"></div>
 
       <div id='map'></div>
       <div id='placeholder'></div>
-      </div>
    </body>
 </html>
