--- a/views/test_view.ejs
+++ b/views/test_view.ejs
@@ -23,12 +23,15 @@
       <script src="/map_script.js"></script>
       <link rel="stylesheet" href="style2.css">
    </head>
-   <body onload="initMap()">
-      <!-- <% include ./partials/navbar %>
-      <% include ./partials/navbar2 %> -->
-   <div id="container"></div>
+   <body>
+   <body>
+      <% include ./partials/navbar %>
+      <% include ./partials/navbar2 %>
+   <div id="container">
 
-      <div id='map'></div>
+      
       <div id='placeholder'></div>
+      </div>
+
    </body>
 </html>
