third page finished

--- a/views/third_view.ejs
+++ b/views/third_view.ejs
@@ -27,6 +27,7 @@
       <% include ./partials/navbar %>
  <div id="container2">
       <div id="place_img" class="img">
+         <img src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=800&photoreference=<%= photo %>&key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ">
       </div>
       <div id="info">
          <div data-spy="scroll" data-target=".navbar" data-offset="50px">
