--- a/views/second_view.ejs
+++ b/views/second_view.ejs
@@ -21,6 +21,7 @@
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ&libraries=places" async defer></script>
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <script src="/map_script.js"></script>
+      <script src="./public/routes/index.js"></script>
       <link rel="stylesheet" href="style2.css">
    </head>
    <body>
