--- a/views/partials/navbar2.ejs
+++ b/views/partials/navbar2.ejs
@@ -10,7 +10,7 @@
          <div id="sec_nav" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Radius<b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Radius = 1000m<b class="caret"></b></a>
                      <ul class="dropdown-menu">
                         <li><a href="#" onclick="setRadius(500)">500m</a></li>
                         <li><a href="#" onclick="setRadius(1000)">1000m</a></li>
@@ -18,7 +18,7 @@
                      </ul>
                </li>
                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">HomeType<b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">HomeType = Condo<b class="caret"></b></a>
                      <ul class="dropdown-menu">
                         <li><a href="#" onclick="setHomeType('Residence')">Residence</a></li>
                         <li><a href="#" onclick="setHomeType('Condo')">Condo</a></li>
