--- a/views/third_view.ejs
+++ b/views/third_view.ejs
@@ -22,12 +22,19 @@
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <!-- <script src="/map_script.js"></script> -->
       <link rel="stylesheet" href="/mystyle.css">
+      <style>
+         .bar-1 {width: <%=bar[0]%>%;}
+         .bar-2 {width: <%=bar[1]%>%;}
+         .bar-3 {width: <%=bar[2]%>%;}
+         .bar-4 {width: <%=bar[3]%>%;}
+         .bar-5 {width: <%=bar[4]%>%;}
+      </style>
    </head>
    <body>
       <% include ./partials/navbar %>
  <div id="container2">
       <div id="place_img" class="img">
-         <img src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=800&photoreference=<%= photo %>&key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ">
+         <img src= <%= photo %>>
       </div>
       <div id="info">
          <div data-spy="scroll" data-target=".navbar" data-offset="50px">
@@ -81,15 +88,12 @@
                      <div class="panel-heading">
                         <div class="panel-title">
                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Overall Rating</a>
-                           <span class="fa fa-star checked"></span>
-                           <span class="fa fa-star checked"></span>
-                           <span class="fa fa-star checked"></span>
-                           <span class="fa fa-star checked"></span>
-                           <span class="fa fa-star"></span>
+                           <h2 id="avgrate"><%= avg%></h2>
                         </div>
                      </div>
                      <div id="collapse1" class="panel-collapse collapse in">
                         <div class="panel-body">
+                     
                            <div class="row">
                               <div class="side">
                                  <div>Excellent</div>
@@ -100,7 +104,7 @@
                                  </div>
                               </div>
                               <div class="side right">
-                                 <div>0</div>
+                                 <div id="rate5"><%= rate[4] %></div>
                               </div>
                               <div class="side">
                                  <div>Good</div>
@@ -111,7 +115,7 @@
                                  </div>
                               </div>
                               <div class="side right">
-                                 <div>0</div>
+                                 <div id="rate4"><%= rate[3] %></div>
                               </div>
                               <div class="side">
                                  <div>Average</div>
@@ -122,7 +126,7 @@
                                  </div>
                               </div>
                               <div class="side right">
-                                 <div>0</div>
+                                 <div id="rate3"><%= rate[2] %></div>
                               </div>
                               <div class="side">
                                  <div>Bad</div>
@@ -133,7 +137,7 @@
                                  </div>
                               </div>
                               <div class="side right">
-                                 <div>0</div>
+                                 <div id="rate2"><%= rate[1] %></div>
                               </div>
                               <div class="side">
                                  <div>Very bad</div>
@@ -144,7 +148,7 @@
                                  </div>
                               </div>
                               <div class="side right">
-                                 <div>0</div>
+                                 <div id="rate1"><%= rate[0] %></div>
                               </div>
                            </div>
                         </div>
@@ -157,8 +161,6 @@
             <h1>Your opinion</h1>
             <form action="/detail/<%= placeid %>/comment" method="POST">
                <div class="form-group">
-                  <label for="userID">userID:</label>
-                  <textarea class="form-control" name="userID" type="text"  id="user" placeholder="What do you think"></textarea>
                   <label for="comment">Comment:</label>
                   <textarea class="form-control" name="reviews" type="text" rows="5" id="comment" placeholder="What do you think"></textarea>
                   <br>
