--- a/views/second_view.ejs
+++ b/views/second_view.ejs
@@ -26,6 +26,7 @@
    </head>
    <body>
    <body>
+      <button onclick="topFunction()" id="toTop" title="Go to top">Top</button>
       <% include ./partials/navbar %>
       <% include ./partials/navbar2 %>
    <div id="container">
