--- a/views/third_view.ejs
+++ b/views/third_view.ejs
@@ -31,6 +31,7 @@
       </style>
    </head>
    <body>
+      <button onclick="topFunction()" id="toTop" title="Go to top">Top</button>
       <% include ./partials/navbar %>
  <div id="container2">
       <div id="place_img" class="img">
@@ -137,7 +138,7 @@
                                  </div>
                               </div>
                               <div class="side right">
-                                 <div id="rate2"><%= rate[1] %></div>
+                                 <div class="number" id="rate2"><%= rate[1] %></div>
                               </div>
                               <div class="side">
                                  <div>Very bad</div>
