--- a/public/style2.css
+++ b/public/style2.css
@@ -71,3 +71,24 @@ body {
 	font-style: italic;
 	font-size: 1.5em;
 }
+
+
+#toTop {
+    display: none;
+    position: fixed;
+    bottom: 70px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #E0FFFF;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+
+}
+
+#toTop:hover {
+    background-color: #DCDCDC;
+}
