little bugs fixed

--- a/views/second_view.ejs
+++ b/views/second_view.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ&libraries=places" async defer></script>
    <head>
       <style>
          @media #screen and (min-width: 1000px) {
@@ -18,7 +19,6 @@
       <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ&libraries=places" async defer></script>
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <script src="/map_script.js"></script>
       <script src="./public/routes/index.js"></script>
