--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,14 @@
 
       <div id="container">
          <div id="firstview">
+            <div id="announcement" style="color:#0000FF">
+              <h3>Announcement</h3>
+              <% for (let date in announcement) { %>
+              <h4 class='media-heading'><%= announcement[date].date %> <%= announcement[date].message %> </h4>
+
+               <% } %>
+              
+            </div>
             <center>
                <br>
                <br>
