--- a/public/style2.css
+++ b/public/style2.css
@@ -1,55 +1,42 @@
 body {
 	padding-top: 50px;
 }
+
+
+/* --- main bocks --- */
+
 #firstnav {
 	background-color: #FFFFFF;
 }
+
 #container {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	z-index: 0;
 }
-#placeholder {
-/*	float: right;*/
-	top: 30px;
-	width: 500px;
-	max-height: 100%;
-	position: relative;
-/*	z-index: 0;*/
-}
-.imageholder {
-	float: left;
-	width: 120px;
-    height: 120px;
-
-}
-#place_img {
-	display: flex;
-	margin: auto;
-	padding-top: 50px;
-	padding-left: 100px;
-}
-
 
 #map {
 	width: 100%;
 	height: 70%;
 }
-@media only screen and (max-width:768px) {
-	.imageholder{
-		display:none;
-	}
-	.listing.col-sm-8 {
-		font-size:1em;
-		left:150px;
-	}
+
+#placeholder {
+	top: 30px;
+	width: 100%;
+	max-height: 100%;
+	position: relative;
+}
+
+/* --- single panel for every place --- */
+.imageholder {
+	float: left;
+	width: 120px;
+    height: 120px;
 }
 
 .panel.listing {
 	border-bottom: : 1px solid #708090;
 	height: 120px;
-	width: 200%;
 	padding-left: 40px;
 }
 
@@ -73,6 +60,8 @@ body {
 }
 
 
+/* --- toTop button --- */
+
 #toTop {
     display: none;
     position: fixed;
@@ -81,14 +70,24 @@ body {
     z-index: 99;
     border: none;
     outline: none;
-    background-color: #E0FFFF;
     background-color: black;
     color: white;
     cursor: pointer;
     padding: 15px;
-
 }
 
 #toTop:hover {
     background-color: #DCDCDC;
+}
+
+/* --- media --- */
+
+@media only screen and (max-width:768px) {
+	.imageholder{
+		display:none;
+	}
+	.listing.col-sm-8 {
+		font-size:1em;
+		left:150px;
+	}
 }
