--- a/public/style3.css
+++ b/public/style3.css
@@ -2,7 +2,8 @@ html, body {
 	height: 100vh;
 	width: 100vw;
 	margin: 0;
-	padding: 0;
+	/*padding: 0;*/
+    padding-bottom:100px; 
 }
 
 /* --- Main blocks --- */
