--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav navbar-right">
-                  <li id="loginas"></li>
+                  <li id="loginas"><span class="glyphicon glyphicon-user"></span></li>
                   <li><button id="registerbtn" type="button" class="btn" onclick="window.location.href='/register'"><span class="glyphicon glyphicon-user"></span> Sign Up</button></li>
                   <li><button id="loginbtn" type="button" class="btn" onclick="window.location.href='/login'"><span class="glyphicon glyphicon-log-in"></span> Login</button></li>
                   <li><button id="logoutbtn" type="button" class="btn" onclick="window.location.href='/logout'"><span class="glyphicon glyphicon-log-in"></span> Log Out</li>
