--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <% include partials/head %>
     <link rel="stylesheet" href="/style.css">
-    <!-- <script src="map_script.js"></script> -->
+    <script src="map_script.js"></script>
     <script type="text/javascript" src="/detail.js"></script>
 </head>
 
