google not define

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,9 @@
    <% include partials/navbar %>
 
       <div id="container">
-         <!-- <div id="firstview"> -->
+         <div id="firstview">
             <div id="announcement" style="color:#0000FF">
-              <h3>Announcement</h3>
-              
+             
               <h4 class='media-heading'><%= date %> <%= message %> </h4>
 
              
@@ -34,7 +33,7 @@
                   </div>
                </div>
             </form>
-         <!-- </div> -->
+         </div>
       </div>
 
    <button onclick="topFunction()" id="toTop" title="Go to top">Top</button>
