--- a/views/second_view.ejs
+++ b/views/second_view.ejs
@@ -13,7 +13,7 @@
    <div id="container">
 
       <div id='map'></div>
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ&libraries=places&callback=initMap" async defer></script>
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIoXZqb6UZnfYX9_KalDVjxFnjS8VeSRQ&libraries=places" async defer></script>
 
       <div id='placeholder'></div>
 
