--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
 <head>
     <% include partials/head %>
     <link rel="stylesheet" href="/style.css">
-    <!-- <script src="map_script.js"></script> -->
-    <script type="text/javascript" src="/detail.js"></script>
+    
+    <script type="text/javascript" src="/home.js"></script>
 </head>
 
 <body>
