--- a/views/third_view.ejs
+++ b/views/third_view.ejs
@@ -36,7 +36,7 @@
                         <ul class="nav navbar-nav">
                            <li ><a href="#Description">Description</a></li>
                            <li><a href="#Review">Review</a></li>
-                           <li ><a href="#userInput">Your opinin</a></li>
+                           <li ><a href="#userInput">Your opinion</a></li>
                         </ul>
                      </div>
                   </div>
