--- a/public/style3.css
+++ b/public/style3.css
@@ -7,8 +7,11 @@ html, body {
 }
 
 img {
-    width: 100%;
+    /*width: 100%;*/
+    
+    max-width: 100%;
     height: auto;
+
 }
 
 /* --- Main blocks --- */
@@ -28,6 +31,7 @@ img {
 	padding-top: 50px;
 	padding-left: 10px;
     padding-right: 10px;
+
 }
 
 #userInput {
@@ -127,15 +131,21 @@ textarea.form-control {
 		font-size:1em;
 		left:-150px;
 	}
+    .img {
+        height: 600px;
+    }
    
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     .side, .middle {
         width: 100%;
     }
     .right {
         display: none;
+    }
+    .img {
+        height: 400px;
     }
 }
 
