--- a/views/partials/navbar2.ejs
+++ b/views/partials/navbar2.ejs
@@ -9,7 +9,7 @@
          </div>
          <div id="sec_nav" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-               <li class="dropdown">
+               <li class="dropdown" id="radius-dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Radius = 1000m<b class="caret"></b></a>
                      <ul class="dropdown-menu">
                         <li><a href="#" onclick="setRadius(500)">500m</a></li>
@@ -17,7 +17,7 @@
                         <li><a href="#" onclick="setRadius(2000)">2000m</a></li>
                      </ul>
                </li>
-               <li class="dropdown">
+               <li class="dropdown" id="home-type-dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">HomeType = Condo<b class="caret"></b></a>
                      <ul class="dropdown-menu">
                         <li><a href="#" onclick="setHomeType('Residence')">Residence</a></li>
