fixed bug in register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -210,7 +210,7 @@ hr{
                 </div> -->
                 <button class="btn btn-lg btn-primary" type="submit">Register</button>
                 <br>
-                <button class="btn btn-lg btn-primary" type="submit" onclick="window.location.href='/'"">Close</button>
+                <button class="btn btn-lg btn-primary" onclick="window.location.href='/'"">Close</button>
             </form>
         </div>
     </div>
