--- a/views/login.ejs
+++ b/views/login.ejs
@@ -206,7 +206,7 @@ hr{
                 <label>
                     
                 </label>
-                <button class="btn btn-lg btn-primary" type="submit" onclick="window.location.href='/'"">Close</button>
+                <button class="btn btn-lg btn-primary" type="button" onclick="window.location.href='/'">Close</button>
             </form>
         </div>
     </div>
