--- a/public/style3.css
+++ b/public/style3.css
@@ -6,7 +6,7 @@ html, body {
     padding-bottom:100px; 
 }
 
-img {
+#place_img > img {
 
     /*width: 100%;*/
     
@@ -44,6 +44,8 @@ img {
 .media {
 	padding-left: 15%;
 }
+
+.media-left 
 
 textarea.form-control {
     height: 300px;
