--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,10 @@
 
       <div id="container">
          <div id="firstview">
-            <div id="announcement" style="color:#0000FF; padding-top:40px;" >
-             
-              <h4 class='media-heading'><%= date %> <%= message %> </h4>
-
+            <div id="announcement" style="color:#0000FF; padding-top:43px; font-size: 20px" >
              
               
+
             </div>
             <center>
                <br>
@@ -38,4 +36,9 @@
    <button onclick="topFunction()" id="toTop" title="Go to top">Top</button>
 
 </body>
+
+<script>
+    
+</script>
+
 </html>
