--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,10 +21,12 @@
                <br>
                <br>
                RateMyHome
+               <br>
+               <h5>Find your Home, and rate it here.</h5>
             </center>
             <form action="/search" method="post" class="navbar-form" role="search">
                <div class="input-group add-on">
-                  <input id="searchbox" type="text" class="form-control" name="place" placeholder="Search">
+                  <input id="searchbox" type="text" class="form-control" name="place" placeholder="Center of your search">
                   <div class="input-group-btn">
                      <button id="searchbox-btn" class="btn btn-xs" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                   </div>
