--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,4 @@
-<title>Place searches</title>
+<title> Rate My Home </title>
 
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
